# fortfem

./: .gitignore  CMakeLists.txt  README.md  fpm.toml  test_plot.f90
.github/workflows/: docs.yml  test.yml
app/: main.f90  triangle_compat_cli.f90
artifacts/solver_benchmarks/: poisson_solver_benchmark.txt
benchmark/: fortfem_mesh_benchmark.f90
example/curl_curl/: curl_curl.f90
example/fortfem_mesh_benchmark/: fortfem_mesh_benchmark.f90
example/minimal_mesh_example/: minimal_mesh_example.f90
example/plot_mesh/: plot_mesh.f90
example/plotting/: plotting.f90
example/simple_poisson/: simple_poisson.f90
example/solver_benchmark/: solver_benchmark.f90
src/: fortfem_api.f90  fortfem_api_forms.f90  fortfem_api_mesh.f90  fortfem_api_mesh_boundaries.f90  fortfem_api_plot.f90  fortfem_api_plot_interpolation.f90  fortfem_api_plot_mesh.f90  fortfem_api_solvers.f90  fortfem_api_solvers_laplacian.f90  fortfem_api_solvers_vector.f90  fortfem_api_spaces.f90  fortfem_api_types.f90  fortfem_boundary.f90  fortfem_forms_simple.f90
src/basis/: basis_edge_2d.f90  basis_p1_2d.f90  basis_p2_2d.f90  basis_q1_quad_2d.f90
src/elements/: basis_1d.f90
src/mesh/: mesh_1d.f90  mesh_2d.f90  triangle_io.f90
src/quadrature/: gauss_quadrature_2d.f90
src/solvers/: advanced_solvers.f90  fortfem_krylov_solvers.f90  fortfem_solvers_laplacian.f90  fortfem_solvers_neumann.f90  fortfem_solvers_p2.f90  fortfem_sparse_matrix.f90  fortfem_umfpack_interface.f90
src/triangle_compat/: tc_alloc.f90  tc_carve.f90  tc_divconq.f90  tc_enforce.f90  tc_flip.f90  tc_geom.f90  tc_insert.f90  tc_locate.f90  tc_poly_io.f90  tc_predicates.f90  tc_qtest.f90  tc_segment.f90  tc_sort.f90  tc_state.f90  triangle_compat.f90
src/triangulation/: bowyer_watson.f90  constrained_delaunay.f90  delaunay_types.f90  geometric_predicates.f90  mesh_refinement.f90  point_location.f90  polygon_triangulation.f90  robust_predicates.f90  triangulation_fortran.f90  triangulator.f90
src/utils/: kinds.f90
test/: check.f90  run_all_tests.f90  run_convergence_tests.f90  tc_compat_check.f90  test_6pt_step.f90  test_advanced_solvers.f90  test_assembly_advanced.f90  test_assembly_system.f90  test_boundary_conditions.f90  test_boundary_conditions_advanced.f90  test_cdt_4pt_debug.f90  test_cdt_segments_debug.f90  test_clean_mesh_api.f90  test_debug_location.f90  test_debug_refinement.f90  test_delaunay_triangulation.f90  test_detailed_diagnostic.f90  test_fortfem_api_solvers_modules.f90  test_fortfem_api_structure.f90  test_freefem_benchmark.f90  test_geometry_check.f90  test_insertion_debug.f90  test_lshape_cdt_hole.f90  test_lshape_hole_refinement_comparison.f90  test_lshape_mesh_plot.f90  test_mesh_boundaries_module.f90  test_mesh_integration.f90  test_mesh_plotting.f90  test_mesh_refinement.f90  test_minimal_mesh_example.f90  test_neumann_boundary_conditions.f90  test_p2_basis_functions.f90  test_p2_lagrange_elements.f90  test_point_location.f90  test_poisson_quads.f90  test_quadrilateral_elements.f90  test_robust_predicates.f90  test_simple_diagnostic.f90  test_solver_integration.f90  test_solver_validation.f90  (+12 more)
test/data/triangle_compat/: annulus.golden.ele  annulus.golden.node  annulus.poly
